# maci-code

./: .gitmodules  AnnulusSector.cc  AnnulusSector.hh  Assembler.hh  AssemblerOutputMatrix.hh  AssemblyProduct.cc  AssemblyProduct.hh  AtomMassAssembler.cc  AtomMassAssembler.hh  AtomWeightedMassAssembler.cc  AtomWeightedMassAssembler.hh  CMakeLists.txt  COPYING  Callback.cc  Callback.hh  CallbackExtern.hh  CharacteristicLength.cc  CharacteristicLength.hh  ConstantFunction.hh  CoordExchange.cc  CoordExchange.hh  Cuboid.cc  Cuboid.hh  DAEqCorrector.cc  DAEqCorrector.hh  DampingCoefficientsComputer.cc  DampingCoefficientsComputer.hh  DampingMethod.cc  DampingMethod.hh  Delete.hh  DesignByContract.hh  ElementBoundingBox.hh  ElementList.cc  ElementList.hh  ElementShadow.cc  ElementShadow.hh  ElementShadowList.cc  ElementShadowList.hh  FineFluctuationFilter.cc  FineFluctuationFilter.hh  (+172 more)
1d/: README  savefig.m  setpath.m  twbdm1.m  wbdm1.m  wbdm1ms.m  wbdmmr.m  xbbd.m
cmake/: MACI_ADD_LIBRARY.cmake  MACI_ADD_SUBDIRS.cmake  MACI_BuildType.cmake  MACI_CONFIG_PY.cmake  MACI_PROCESS_SWIG.cmake  MACI_SysHeaders.cmake  create-banner.sh
config/: build.py
doc/: Commands.tex  Description_Script.tex  Description_XML.tex  Installation.tex  Introduction.tex  Makefile  Overview.tex  Regression_Testing.tex  Running_MACI.tex  main.bib  main.tex
examples/: cub.json  exp.json  maci-lammps_ug_csr.json  maci-lammps_ug_oski.json  maci-lammps_ug_spblas.json  maci-tremolo_ug_csr.json  maci-tremolo_ug_oski.json  maci-tremolo_ug_spblas.json  submit.py
exception/: BadArgException.cc  BadArgException.hh  BadCallException.cc  BadCallException.hh  BadCheckException.cc  BadCheckException.hh  BadDefaultException.cc  BadDefaultException.hh  BadPlaceException.cc  BadPlaceException.hh  BadPostcondException.cc  BadPostcondException.hh  BadPrecondException.cc  BadPrecondException.hh  ExceptionBase.cc  ExceptionBase.hh  Failure.cc  Failure.hh  Throw.hh
fe/: FiniteElements.hh  GenericSolver.hh  PvoWriter.cc  PvoWriter.hh  Writer.cc  Writer.hh
hash/: CMakeLists.txt  hash.hh  hashmem.cc  hashmem.hh  hashtab.c  hashtab.h  lookupa.c  lookupa.h  recycle.c  recycle.h  standard.h
linalg/: CSRHelper.cc  CSRHelper.hh  CoordMatrix.cc  CoordMatrix.hh  CoordMatrixDuplicatesHelper.hh  PetscSolver.cc  PetscSolver.hh  SerialUmfpackSolver.cc  SerialUmfpackSolver.hh  Solver.cc  Solver.hh  SparseBLASMatrix.cc  SparseBLASMatrix.hh  SparseCSRMatrix.cc  SparseCSRMatrix.hh  SparseMKLMatrix.cc  SparseMatrix.hh  SparseOSKIMatrix.cc  SparseOSKIMatrix.hh  TrilinosSolver.cc  TrilinosSolver.hh
md/: Exception.hh  GenericSystem.hh  MolecularDynamics.hh  PvoWriter.cc  PvoWriter.hh  Writer.cc  Writer.hh
meshing/: CMakeLists.txt  Cuboid.py  CuboidList.py  Mesh.py  MeshPatch.py  __init__.py  meshgen.in  meshing.cc  meshing.hh  meshing.i
misc/: lammps-21Jul10.patch  lammps-7Dec10.patch
misc/spblas-1.02/: CMakeLists.txt
misc/wmpi/: CMakeLists.txt  __init__.py  communicator.cc  communicator.hh  communicator.py  wmpi.cc  wmpi.hh  wmpi.i
misc/wmpi/test/: test.py
mpi/: Cartcommunicator.cc  Cartcommunicator.hh  Communicator.cc  Communicator.hh  Datatype.hh  Group.cc  Group.hh  Intercommunicator.cc  Intercommunicator.hh  Irequest.cc  Irequest.hh  Window.hh  config.hh  create-datatype.rb
plugins/: MeasureEnergy.cc  MeasureEnergy.hh  MeasureMaxStress.cc  MeasureMaxStress.hh  MonitorDampingForce.cc  MonitorDampingForce.hh  MonitorResidual.cc  MonitorResidual.hh  ShowProgress.cc  ShowProgress.hh  Visualize.cc  Visualize.hh
polylib/: Box.hh  BoxIntersection.hh  BoxRefine.hh  polylib.hh
pulib/: CMakeLists.txt  puBasisFunction.cc  puBasisFunction.hh  puParallel.hh  puPatch.cc  puPatch.hh  puQuad.cc  puQuad.hh  puShepard.cc  puShepard.hh  puSpace.cc  puSpace.hh  puTree.cc  puTree.hh  puVisualize.cc  puVisualize.hh  pulib.hh  typedefs.hh
python/: CMakeLists.txt  ppp.rb  ppprt.py
python/exe/: CMakeLists.txt  Maci_Driver.py.in  Shell.cc.in  maci.in
python/maci/: AnnulusSector.i  AssemblyProduct.i  CMakeLists.txt  ConstantFunction.i  Cuboid.i  DAEqCorrector.i  DampingMethod.i  DampingMethodProxy.py.in  FESolverBase.py.in  FilterProxy.py.in  FineFluctuationFilter.i  FrictionDamper.i  FrictionFineFluctuationDamper.i  Function.i  FunctionPyObj.hh  GeoPrimitive.i  HandshakeGeo.i  InputPath.py  InterpolationFunction.i  InterpolationWeights.i  InterpolationWeights.py.in  L2FineFluctuationFilter.i  L2ParallelMultiplierMatrix.i  L2PetscMultiplierMatrix.i  L2Projection.i  L2Transfer.i  L2TrilinosMultiplierMatrix.i  L2UmfpackMultiplierMatrix.i  Logging.i  LsFineFluctuationFilter.i  LsLumpedMeshMassMatrix.i  LsParallelMultiplierMatrix.i  LsPetscMultiplierMatrix.i  LsProjection.i  LsTransfer.i  LsTrilinosMultiplierMatrix.i  LsUmfpackMultiplierMatrix.i  MMSystemBase.py.in  MeshMassMatrix.i  MexicoUser.i  (+41 more)
python/maci/lammps/: MMSystem.py.in  __init__.py  lammpsComputeList.i  lammpsInstance.i
python/maci/tremolo/: MMSystem.py.in  __init__.py  tremoloInstance.i  tremoloRattleIntegrator.i  tremoloTimeIntegrator.i  tremoloVerletIntegrator.i
python/maci/ug/: DirichletEnforcer.i  DirichletForceCalculator.i  FESolver.py.in  Mesh.py.in  NeumannForceCalculator.i  SolverImplementation.i  __init__.py.in  ugRattleIntegrator.i  ugTimeIntegrator.i  ugVerletIntegrator.i
python/plugins/: CMakeLists.txt  MeasureEnergy.i  MeasureEnergy.py.in  MonitorDampingForce.i  MonitorDampingForce.py.in  MonitorResidual.i  MonitorResidual.py.in  Plugin.i  ShowProgress.i  ShowProgress.py.in  Visualize.i  Visualize.py.in  __init__.py.in  plugins.i
quad/: GaussPoint.hh  GaussPointList.hh  GaussPointPayload.hh  test.cc
scripts/: CMakeLists.txt  README  YoungModulusCB2.m  crack2X.in  crack3Y.in  mdblock3.in  mdcarpet2.in  mdcrack2.in  mdsphere2.in  meshstats.in  overlap2.in  particles.py  pd2vtk  pennycrack2.in  sandwich2Y.in  sandwich3Y.in  surrounded2.in
scripts/lammps/: export.py
scripts/tremolo/: export.py
tests/: example_lammps_ug_csr_debug.json  example_lammps_ug_csr_release.json  example_lammps_ug_oski_debug.json  example_lammps_ug_oski_release.json  testing.py  (+8 more)
(+295 files in other folders)
