
# ------------------------------------------------------------------------------
# Installation
# ------------------------------------------------------------------------------
SET(files "")

IF(HAVE_TREMOLO)
	INSTALL(FILES		tremolo/export.py
            DESTINATION	share/maci)
ENDIF()
IF(HAVE_LAMMPS)
	INSTALL(FILES 		lammps/export.py
            DESTINATION	share/maci)
ENDIF()

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sandwich2Y.in
               ${CMAKE_CURRENT_BINARY_DIR}/sandwich2Y)	
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sandwich3Y.in
               ${CMAKE_CURRENT_BINARY_DIR}/sandwich3Y)	
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/surrounded2.in
               ${CMAKE_CURRENT_BINARY_DIR}/surrounded2)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mdcarpet2.in
               ${CMAKE_CURRENT_BINARY_DIR}/mdcarpet2)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mdsphere2.in
               ${CMAKE_CURRENT_BINARY_DIR}/mdsphere2)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mdcrack2.in
               ${CMAKE_CURRENT_BINARY_DIR}/mdcrack2)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/crack2X.in
               ${CMAKE_CURRENT_BINARY_DIR}/crack2X)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/crack3Y.in
               ${CMAKE_CURRENT_BINARY_DIR}/crack3Y)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mdblock3.in
               ${CMAKE_CURRENT_BINARY_DIR}/mdblock3)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/overlap2.in
               ${CMAKE_CURRENT_BINARY_DIR}/overlap2)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/pennycrack2.in
               ${CMAKE_CURRENT_BINARY_DIR}/pennycrack2)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/meshstats.in
               ${CMAKE_CURRENT_BINARY_DIR}/meshstats)

INSTALL(FILES		particles.py
        DESTINATION	share/maci/)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/sandwich2Y
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/sandwich3Y
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/surrounded2
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_SOURCE_DIR}/pd2vtk
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/mdcarpet2
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/mdsphere2
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/mdcrack2
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/crack2X
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/crack3Y
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/mdblock3
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES		${CMAKE_CURRENT_BINARY_DIR}/overlap2
        DESTINATION	share/maci/
        PERMISSIONS	OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                    OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES           ${CMAKE_CURRENT_BINARY_DIR}/pennycrack2
        DESTINATION     share/maci/
        PERMISSIONS     OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                        OWNER_READ    GROUP_READ    GROUP_READ)
INSTALL(FILES           ${CMAKE_CURRENT_BINARY_DIR}/meshstats
        DESTINATION     share/maci/
        PERMISSIONS     OWNER_EXECUTE GROUP_EXECUTE GROUP_EXECUTE
                        OWNER_READ    GROUP_READ    GROUP_READ)

